<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_key_notification_settings"
        android:title="@string/notifications_settings" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_allow_notifications"
            android:summary="@string/pref_allow_notifications_summary"
            android:title="@string/pref_allow_notifications" />

        <Preference
            android:dependency="pref_key_allow_notifications"
            android:key="pref_key_notification_frequency"
            android:summary="@string/pref_notification_frequency_summary"
            android:title="@string/pref_notification_frequency" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="pref_key_allow_notifications"
            android:key="pref_key_notification_sound"
            android:summary="@string/pref_notification_sound_summary"
            android:title="@string/pref_notification_sound" />
    </PreferenceCategory>

</PreferenceScreen>