<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pc_light_blue" >

    <com.flavienlaurent.notboringactionbar.KenBurnsSupportView
        android:id="@+id/sign_in_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </com.flavienlaurent.notboringactionbar.KenBurnsSupportView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp" >

            <EditText
                android:id="@+id/sign_in_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/grey_bg"
                android:hint="@string/user_id"
                android:inputType="textCapCharacters"
                android:maxLength="32"
                android:singleLine="true"
                android:text="@string/example"
                android:textColor="@color/white"
                android:textColorHint="@color/pc_light_blue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/log_in_submit_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dark_bg_button"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/sign_in_spinner"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone" >

                <uk.co.edgeorgedev.gtsmate.ui.ProgressWheel
                    android:id="@+id/progress_wheel"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    wheel:barColor="@color/white"
                    wheel:barWidth="3dp"
                    wheel:progressIndeterminate="true" />

            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>